--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -1,9 +1,9 @@
 
 .nav_menu
 {
-    padding: 1em 2em 1em 2em;
+    padding: 1em 5em 1em 5em;
     display: flex;
-    background-color: #222629;
+    background-color: var(--grey3);
     align-items: center;
     position: sticky; 
     top: 0;
@@ -48,10 +48,7 @@ ul
 }
 @media only screen and (max-width: 800px) {
     .mobile_menu{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
+        display: block;
     }
     .menu_item{
         display: none;
